@@ -437,6 +437,17 @@
           Bind or jump to a slot (a frame or a window)
         </td>
       </tr>
+      <tr>
+        <td align="right" style="color:#ff0000" nowrap>
+           Mod-1 
+        </td>
+        <td align="center" nowrap>
+          F2
+        </td>
+        <td style="color:#0000ff" nowrap>
+          Open the Music Player Daemon (MPD) menu
+        </td>
+      </tr>
     </table>
     <h3>
       <u>
@@ -593,7 +604,7 @@ Or do actions on corners
           F1
         </td>
         <td style="color:#0000ff" nowrap>
-          Open the help and info window for the second mode
+          Open the help and info window
         </td>
       </tr>
       <tr>
@@ -967,7 +978,7 @@ Or do actions on corners
             O
         </td>
         <td style="color:#0000ff" nowrap>
-          Open the next window in a new frame in the root frame
+          Open the next window in a new frame in the parent frame
         </td>
       </tr>
       <tr>
@@ -978,7 +989,7 @@ Or do actions on corners
             O
         </td>
         <td style="color:#0000ff" nowrap>
-          Open the next window in a new frame in the parent frame
+          Open the next window in a new frame in the root frame
         </td>
       </tr>
       <tr>
