@@ -18,6 +18,9 @@
       <a name="MAIN"></a><a href="#Top">Main</a>
     </h3>
     <p>
+      F1: <a href="#HELP-MENU">< Help menu ></a>
+    </p>
+    <p>
       d: <a href="#STANDARD-MENU">< Standard menu ></a>
     </p>
     <p>
@@ -43,6 +46,100 @@
     </p>
     <p>
       m: <a href="#CLFSWM-MENU">< CLFSWM menu ></a>
+    </p>
+    <hr>
+    <h3>
+      <a name="HELP-MENU"></a><a href="#MAIN">Help-Menu</a>
+    </h3>
+    <p>
+      h: Show all key binding
+    </p>
+    <p>
+      b: Show the main mode binding
+    </p>
+    <p>
+      s: Show the second mode key binding
+    </p>
+    <p>
+      c: Help on clfswm corner
+    </p>
+    <p>
+      g: Show all configurable variables
+    </p>
+    <p>
+      d: Show the current time and date
+    </p>
+    <p>
+      p: Show current processes sorted by CPU usage
+    </p>
+    <p>
+      m: Show current processes sorted by memory usage
+    </p>
+    <p>
+      x: <a href="#XMMS-INFO-MENU">< XMMS menu ></a>
+    </p>
+    <p>
+      v: Show the current CLFSWM version
+    </p>
+    <p>
+      i: <a href="#INFO-ON-CD-MENU">< CD info menu ></a>
+    </p>
+    <p>
+      F2: <a href="#MPD-MENU">< Music Player Daemon (MPD) menu ></a>
+    </p>
+    <hr>
+    <h3>
+      <a name="XMMS-INFO-MENU"></a><a href="#HELP-MENU">Xmms-Info-Menu</a>
+    </h3>
+    <p>
+      s: Show the current xmms status
+    </p>
+    <p>
+      l: Show the current xmms playlist
+    </p>
+    <hr>
+    <h3>
+      <a name="INFO-ON-CD-MENU"></a><a href="#HELP-MENU">Info-On-Cd-Menu</a>
+    </h3>
+    <p>
+      i: Show the current CD track
+    </p>
+    <p>
+      l: Show the current CD playlist
+    </p>
+    <hr>
+    <h3>
+      <a name="MPD-MENU"></a><a href="#HELP-MENU">Mpd-Menu</a>
+    </h3>
+    <p>
+      i: Show MPD informations
+    </p>
+    <p>
+      p: Play the previous song in the current playlist
+    </p>
+    <p>
+      n: Play the next song in the current playlist
+    </p>
+    <p>
+      t: Toggles Play/Pause, plays if stopped
+    </p>
+    <p>
+      y: Start playing
+    </p>
+    <p>
+      k: Stop the currently playing playlists
+    </p>
+    <p>
+      x: Seeks to +5%
+    </p>
+    <p>
+      w: Seeks to -5%
+    </p>
+    <p>
+      l: Show the current MPD playlist
+    </p>
+    <p>
+      s: Start sonata
     </p>
     <hr>
     <h3>
@@ -131,25 +228,28 @@
       a: <a href="#FRAME-FAST-LAYOUT-MENU">< Frame fast layout menu ></a>
     </p>
     <p>
-      b: No layout: Maximize windows in there frame - Leave frame to there size
+      b: No layout: Maximize windows in there frame - Leave frames to there original size
     </p>
     <p>
-      c: Maximize layout: Maximize windows and frames in there parent frame
+      c: No layout: Maximize windows in there frame - Leave frames to there actual size
     </p>
     <p>
-      d: <a href="#FRAME-TILE-LAYOUT-MENU">< Frame tile layout menu ></a>
+      d: Maximize layout: Maximize windows and frames in there parent frame
     </p>
     <p>
-      e: <a href="#FRAME-TILE-DIR-LAYOUT-MENU">< Tile in one direction layout menu ></a>
+      e: <a href="#FRAME-TILE-LAYOUT-MENU">< Frame tile layout menu ></a>
     </p>
     <p>
-      f: <a href="#FRAME-TILE-SPACE-LAYOUT-MENU">< Tile with some space on one side menu ></a>
+      f: <a href="#FRAME-TILE-DIR-LAYOUT-MENU">< Tile in one direction layout menu ></a>
     </p>
     <p>
-      g: <a href="#FRAME-MAIN-WINDOW-LAYOUT-MENU">< Main window layout menu ></a>
+      g: <a href="#FRAME-TILE-SPACE-LAYOUT-MENU">< Tile with some space on one side menu ></a>
     </p>
     <p>
-      h: <a href="#FRAME-GIMP-LAYOUT-MENU">< The GIMP layout menu ></a>
+      h: <a href="#FRAME-MAIN-WINDOW-LAYOUT-MENU">< Main window layout menu ></a>
+    </p>
+    <p>
+      i: <a href="#FRAME-GIMP-LAYOUT-MENU">< The GIMP layout menu ></a>
     </p>
     <hr>
     <h3>
