@@ -1,5 +1,9 @@
 2009-06-28  Philippe Brochard  <pbrochard@common-lisp.net>
 
+	* src/clfswm-layout.lisp (set-no-layout-remember-size): New layout:
+	Maximize windows in there frame - Leave frames to there	actual
+	size.
+
 	* src/bindings-second-mode.lisp (set-default-second-keys): Bind
 	"o" on set-open-in-new-frame-in-parent-frame-nw-hook.
 
